[gd_scene load_steps=8 format=2]

[ext_resource path="res://prefabs/Desert.meshlib" type="MeshLibrary" id=1]
[ext_resource path="res://ProceduralDesert.gd" type="Script" id=2]
[ext_resource path="res://assets/environments/desert_env.tres" type="Environment" id=3]
[ext_resource path="res://prefabs/Car.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Main.gd" type="Script" id=5]
[ext_resource path="res://prefabs/desert/RoadTile.tscn" type="PackedScene" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 60, 10, 60 )

[node name="Main" type="Spatial"]
script = ExtResource( 5 )

[node name="DesertMap" type="GridMap" parent="."]
mesh_library = ExtResource( 1 )
cell_size = Vector3( 256, 256, 256 )
cell_center_y = false
data = {
"cells": PoolIntArray( 0, 0, 1610612738 )
}
script = ExtResource( 2 )
__meta__ = {
"_editor_clip_": 0
}

[node name="RoadTile" parent="DesertMap" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 128, 0, 128 )
empty = true

[node name="Objects" type="Spatial" parent="DesertMap"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 3 )

[node name="Car" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 111, 0, 10 )
gravity_scale = 1.0

[node name="GenerationTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="SkyExit" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 111, 300, 0 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="SkyExit"]
shape = SubResource( 1 )
[connection signal="timeout" from="GenerationTimer" to="." method="update_player_position"]
[connection signal="body_entered" from="SkyExit" to="." method="on_exit_sky"]
